@@ -101,7 +101,15 @@ E.Options.args.skins = {
 					name = L['Enable'],
 					type = 'toggle',
 					order = 1,				
-				},			
+				},	
+				barHeight = {
+					name = L['Embedded Bar Height'],
+					desc = L['The height of the bars while skada is embedded.'],
+					order = 2,
+					type = 'range',
+					min = 10, max = 30, step = 1,
+					set = function(info, value) E.global.skins.skada.barHeight = value; S:SetEmbedRight(E.db.skins.embedRight) end,
+				},
 			},
 		},	
 		dxe = {
