@@ -6,9 +6,11 @@
 *Add Clique Skin. (Credit: Nidra)
 *Minimap icons should now be skinned to match ElvUI. (Credit: Tomkuzyno)
 *Add skin for Addon Control Panel (Credit: Camealion)
+*Add an option under the skada skin section of the config to control the bar height of the individual bars.
 
 [b]General Changes[/b]
 *The World Map Alpha setting should properly change Opacity, it was working the opposite of how it was intended before. 100% Opacity means the frame is fully faded away now.
+*Add currency information to the bags datatext tooltip.
 
 [b]Fixes[/b]
 *The Reputation bar should have its width correctly set on login.
